lib/lexer/opam_lexis.c
/* Generated by re2c 3.1 on Fri Jan 24 09:17:59 2025 */
#line 1 "lib/lexer/lexis/opam_lexis.re"
// opam lexer
// re2c $INPUT -o $OUTPUT -i

/* NB: constants for terminals generated from opam_parser.y.
   makeheaders arranges so that any needed here are included in
   opam_lexis.h. Isn't that sweet?
 */

#include <assert.h>
#include <errno.h>
#ifdef __linux__
#include <linux/limits.h>
#else
#include <limits.h>
#endif
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <unistd.h>

#include <sys/errno.h>

#include "liblogc.h"
#include "opam_lexis.h"

#if EXPORT_INTERFACE
#define BUFSIZE 1024
#ifndef MAX_DEPS
#define MAX_DEPS 64
#endif
#endif

const char *deps[MAX_DEPS];
int opam_curr_tag = 0;

/* enable start conditions */
#line 40 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
enum YYCONDTYPE {
	yyc0,
	yycinit,
	yyccmdset,
	yyccmds,
	yycterm,
	yycterm_filter,
	yyccmd_filter,
	yycdepends,
	yycfpf,
	yycfvf,
	yyctriplequote
};
#line 37 "lib/lexer/lexis/opam_lexis.re"


#define DEBUG_LEVEL debug_opamc_lexis
int  DEBUG_LEVEL;
#define TRACE_FLAG trace_opamc_lexis
bool TRACE_FLAG;

#if EXPORT_INTERFACE
#include <stdbool.h>
union opam_token_u {
    char c;
    int i;
    char *s;
    bool boolval;
};

struct opam_lexer_s
{
    const char *filename;       /* FIXME: rename to src (may be string or filename */
    const char *tok;
    const char *cursor;
    const char *limit;
    const char *marker;
    int mode;                   /* i.e. start condition */
};

#endif


EXPORT void opam_lexer_init(const char*filename,
                     struct opam_lexer_s *lexer,
                     const char *input)
{
    lexer->filename = filename;
    lexer->cursor = input;
}

EXPORT void opam_lexer_free(opam_lexer_s *lexer)
{
    /* log_debug("lexer_free: %s", lexer->fname); */
    /* utarray_free(lexer->indent_kws); */
}

/* static void mtag(const char *t) */
// static void mtag(int t)
// {
//     /* fprintf(stderr, "mtag ctor idx: %d, s: %.22s\n", opam_curr_tag, t); */
//     /* deps[opam_curr_tag++] = t; */
// }


/* static void print_tags() { */
/*     /\* fprintf(stderr, "printing %d tags:\n", opam_curr_tag/2); *\/ */
/*     for (int i=0; i < opam_curr_tag/2 ; i++) { */
/*         fprintf(stderr, "\tVALTOK: '%*s'\n", (int)(deps[i*2+1] - deps[i*2]), deps[i*2]); */
/*     } */
/*     /\* fprintf(stderr, "done\n"); *\/ */
/* } */

#define YYMTAGP(t) mtag(YYCURSOR)
#define YYMTAGN(t) mtag(NULL)

//#define LEXDEBUG_FVF 1

static bool start = true;

EXPORT int get_next_opam_token(struct opam_lexer_s *lexer, union opam_token_u *otok)
{
    LOG_DEBUG(0, "get_next_opam_token cursor: '%s'", lexer->cursor);
    if (start) {
        LOG_DEBUG(0, "STARTING XXXXXXXXXXXXXXXX", "");
        LOG_DEBUG(0, "lexer start mode: %d", lexer->mode);
        LOG_DEBUG(0, "\t<init>: %d", yycinit);
        LOG_DEBUG(0, "\t<cmdset>: %d", yyccmdset);
        LOG_DEBUG(0, "\t<cmd_filter>: %d", yyccmd_filter);
	/* yyc0, */
	/* yycinit, */
	/* yyccmdset, */
	/* yyccmds, */
	/* yycterm, */
	/* yycterm_filter, */
	/* yyccmd_filter, */
	/* yycdepends, */
	/* yycfpf, */
	/* yycfvf, */
	/* yyctriplequote */
    }
#if defined(LEXDEBUG_FVF)
    // only set lexer->mode on initial call
    /* static bool start = true; */
    if (start) {
        LOG_DEBUG(0, "yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
        lexer->mode = yycfpf;
        LOG_DEBUG(0, "start mode: %d", lexer->mode);
        start = false;
    }
#elif defined (LEXDEBUG_FPF)
    /* static bool start = true; */
    if (start) {
        LOG_DEBUG(0, "yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
        lexer->mode = yycfpf;
        LOG_DEBUG(0, "start mode: %d", lexer->mode);
        start = false;
    }
#elif defined (LEXDEBUG_FILTERS)
    if (start) {
        LOG_DEBUG(0, "yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
        lexer->mode = yycfvf;
        LOG_DEBUG(0, "start mode: %d", lexer->mode);
        start = false;
    }
#else
    if (start) {
        lexer->mode = yycinit;
        LOG_DEBUG(0, "lexer mode: %d", lexer->mode);
        LOG_DEBUG(0, "yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
                  yycinit, yycdepends, yycfpf, yycfvf);
        start = false;
    }
    LOG_DEBUG(0, "lexer mode: %d", lexer->mode);
#endif

    /* stags */
    const char *s1, *s2;        /* dq strings */
    /* const char *pkg1, *pkg2; */
    /* const char *pred1, *pred2; */
    /* const char *txt1, *txt2; */

    /* mtags */
    /* int f1, f2; */                 /* flags */
    /* int dep1, dep2; */
    /* const char *vtok1, *vtok2; */

    /* int h1, h2; */
    
#line 193 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
const char *yyt1;const char *yyt2;
#line 174 "lib/lexer/lexis/opam_lexis.re"

    
#line 198 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
#line 175 "lib/lexer/lexis/opam_lexis.re"

loop:
    opam_curr_tag = 0;
    lexer->tok = lexer->cursor;
    
#line 205 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
#line 179 "lib/lexer/lexis/opam_lexis.re"

    
#line 209 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
{
	char yych;
	unsigned int yyaccept = 0;
	switch (lexer->mode) {
		case yyc0: goto yyc_0;
		case yycinit: goto yyc_init;
		case yyccmdset: goto yyc_cmdset;
		case yyccmds: goto yyc_cmds;
		case yycterm: goto yyc_term;
		case yycterm_filter: goto yyc_term_filter;
		case yyccmd_filter: goto yyc_cmd_filter;
		case yycdepends: goto yyc_depends;
		case yycfpf: goto yyc_fpf;
		case yycfvf: goto yyc_fvf;
		case yyctriplequote: goto yyc_triplequote;
	}
/* *********************************** */
yyc_0:
#line 229 "lib/lexer/lexis/opam_lexis.re"
	{
            /* printf("yycinit: %d, yycdepends: %d, yycfvf: %d\n", */
            /*        yycinit, yycdepends, yycfvf); */
            /* lexer->mode = yycdepends; */
        }
#line 234 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
/* *********************************** */
yyc_init:
	yych = *lexer->cursor;
	switch (yych) {
		case 0x00: goto yy2;
		case '\t':
		case '\n':
		case ' ': goto yy5;
		case '!':
			yyt1 = lexer->cursor;
			goto yy7;
		case '"': goto yy9;
		case '#': goto yy10;
		case '&':
		case '|': goto yy11;
		case '(': goto yy12;
		case ')': goto yy14;
		case ',': goto yy15;
		case '-':
			yyt1 = lexer->cursor;
			goto yy16;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			yyt1 = lexer->cursor;
			goto yy17;
		case ':': goto yy19;
		case '<':
		case '>':
			yyt1 = lexer->cursor;
			goto yy20;
		case '=': goto yy22;
		case '?': goto yy23;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'e':
		case 'f':
		case 'g':
		case 'j':
		case 'k':
		case 'q':
		case 'u':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			yyt1 = lexer->cursor;
			goto yy24;
		case '[': goto yy27;
		case ']': goto yy28;
		case '_':
			yyt1 = lexer->cursor;
			goto yy29;
		case 'a':
			yyt1 = lexer->cursor;
			goto yy30;
		case 'b':
			yyt1 = lexer->cursor;
			goto yy31;
		case 'c':
			yyt1 = lexer->cursor;
			goto yy32;
		case 'd':
			yyt1 = lexer->cursor;
			goto yy33;
		case 'h':
			yyt1 = lexer->cursor;
			goto yy34;
		case 'i':
			yyt1 = lexer->cursor;
			goto yy35;
		case 'l':
			yyt1 = lexer->cursor;
			goto yy36;
		case 'm':
			yyt1 = lexer->cursor;
			goto yy37;
		case 'n':
			yyt1 = lexer->cursor;
			goto yy38;
		case 'o':
			yyt1 = lexer->cursor;
			goto yy39;
		case 'p':
			yyt1 = lexer->cursor;
			goto yy40;
		case 'r':
			yyt1 = lexer->cursor;
			goto yy41;
		case 's':
			yyt1 = lexer->cursor;
			goto yy42;
		case 't':
			yyt1 = lexer->cursor;
			goto yy43;
		case 'v':
			yyt1 = lexer->cursor;
			goto yy44;
		case '{': goto yy45;
		case '}': goto yy46;
		default: goto yy3;
	}
yy2:
	++lexer->cursor;
#line 501 "lib/lexer/lexis/opam_lexis.re"
	{
            LOG_DEBUG(0, "lexing completed", "");
            return 0;
        }
#line 375 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy3:
	++lexer->cursor;
yy4:
#line 495 "lib/lexer/lexis/opam_lexis.re"
	{
            fprintf(stderr, "ERROR lexing: %s: %s\n",
                    lexer->filename, lexer->tok);
            exit(-1);
        }
#line 385 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy5:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy5;
		default: goto yy6;
	}
yy6:
#line 468 "lib/lexer/lexis/opam_lexis.re"
	{ goto loop; }
#line 397 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy7:
	yych = *++lexer->cursor;
	switch (yych) {
		case '=': goto yy47;
		default: goto yy8;
	}
yy8:
#line 251 "lib/lexer/lexis/opam_lexis.re"
	{ return BANG; }
#line 407 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy9:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '"': goto yy49;
		case '\\':
			yyt1 = lexer->cursor;
			goto yy51;
		default:
			yyt1 = lexer->cursor;
			goto yy48;
	}
yy10:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\n': goto yy52;
		default: goto yy10;
	}
yy11:
	++lexer->cursor;
	s1 = lexer->cursor - 1;
	s2 = lexer->cursor;
#line 253 "lib/lexer/lexis/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            return LOGOP;
        }
#line 435 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy12:
	yyaccept = 1;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '*': goto yy53;
		default: goto yy13;
	}
yy13:
#line 236 "lib/lexer/lexis/opam_lexis.re"
	{ return LPAREN; }
#line 446 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy14:
	++lexer->cursor;
#line 237 "lib/lexer/lexis/opam_lexis.re"
	{ return RPAREN; }
#line 451 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy15:
	++lexer->cursor;
#line 244 "lib/lexer/lexis/opam_lexis.re"
	{ return COMMA; }
#line 456 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy16:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '-':
		case '_': goto yy54;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy17;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy4;
	}
yy17:
	yyaccept = 2;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '-':
		case '_': goto yy54;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy17;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy18;
	}
yy18:
	s1 = yyt1;
	s2 = lexer->cursor;
#line 442 "lib/lexer/lexis/opam_lexis.re"
	{
                otok->s = strndup(s1, (size_t)(s2-s1));
                LOG_DEBUG(0, "returning INT %s", otok->s);
                return INT;
                         }
#line 606 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy19:
	++lexer->cursor;
#line 243 "lib/lexer/lexis/opam_lexis.re"
	{ return COLON; }
#line 611 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy20:
	yych = *++lexer->cursor;
	switch (yych) {
		case '=': goto yy47;
		default: goto yy21;
	}
yy21:
	s1 = yyt1;
	s2 = lexer->cursor;
#line 246 "lib/lexer/lexis/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            LOG_DEBUG(1, "mode %d: RELOP %s", lexer->mode, otok->s);
            return RELOP;
        }
#line 627 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy22:
	++lexer->cursor;
	s1 = lexer->cursor - 1;
	s2 = lexer->cursor;
#line 487 "lib/lexer/lexis/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            return RELOP;
        }
#line 637 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy23:
	++lexer->cursor;
#line 252 "lib/lexer/lexis/opam_lexis.re"
	{ return QMARK; }
#line 642 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy24:
	yych = *++lexer->cursor;
yy25:
	switch (yych) {
		case '-':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy26;
	}
yy26:
	s1 = yyt1;
	s2 = lexer->cursor;
#line 482 "lib/lexer/lexis/opam_lexis.re"
	{
            otok->s = (char*) strndup(s1, (size_t)(s2 - s1));
            return VARIDENT;
        }
#line 721 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy27:
	++lexer->cursor;
#line 238 "lib/lexer/lexis/opam_lexis.re"
	{ return LBRACKET; }
#line 726 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy28:
	++lexer->cursor;
#line 239 "lib/lexer/lexis/opam_lexis.re"
	{ return RBRACKET; }
#line 731 "bazel-out/darwin_arm64-fastbuild/bin/lib/lexer/lexis/opam_lexis.c"
yy29:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '-':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case '_': goto yy54;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy24;
		default: goto yy4;
	}
yy30:
